syntax = "proto3";

package mvoter2015;

option java_package = "com.popstack.mvoter2015.data.cache";
option java_multiple_files = true;

message AppUpdateProto {
  int32 latest_version_code = 1;
  bool require_forced_update = 2;
  string play_store_link = 3;
  string download_link = 4;
}